imported the lib

--- a/A_Dhruva_Krishnama_Raju.ipynb
+++ b/A_Dhruva_Krishnama_Raju.ipynb
@@ -1,47 +1,34 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "A Dhruva Krishnama Raju.ipynb",
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
         "id": "lP-rnNoRNccd"
       },
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
+        "import seaborn as sp\n",
         "import sklearn"
-      ],
-      "execution_count": 3,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
       "metadata": {
         "id": "-xVxIlPTNhMz"
       },
+      "outputs": [],
       "source": [
         "from sklearn.datasets import load_boston\n",
         "df = load_boston()"
-      ],
-      "execution_count": 4,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -49,27 +36,27 @@
         "id": "EJuOGDMVOTOQ",
         "outputId": "907b39db-e696-4c98-c2e4-c3d21d354f5d"
       },
-      "source": [
-        "df.keys() #Returns all the keys of the dataset dictionary"
-      ],
-      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "dict_keys(['data', 'target', 'feature_names', 'DESCR', 'filename'])"
             ]
           },
+          "execution_count": 5,
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "df.keys() #Returns all the keys of the dataset dictionary"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -77,12 +64,9 @@
         "id": "yuM75vk2QIkn",
         "outputId": "b0ce968b-7b1d-49b1-a304-675a600e0c14"
       },
-      "source": [
-        "print(df.DESCR) #Info about the dataset"
-      ],
-      "execution_count": 6,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             ".. _boston_dataset:\n",
@@ -136,13 +120,17 @@
             "   - Belsley, Kuh & Welsch, 'Regression diagnostics: Identifying Influential Data and Sources of Collinearity', Wiley, 1980. 244-261.\n",
             "   - Quinlan,R. (1993). Combining Instance-Based and Model-Based Learning. In Proceedings on the Tenth International Conference of Machine Learning, 236-243, University of Massachusetts, Amherst. Morgan Kaufmann.\n",
             "\n"
-          ],
-          "name": "stdout"
+          ]
         }
+      ],
+      "source": [
+        "print(df.DESCR) #Info about the dataset\n",
+        "#information about the dataset"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -151,14 +139,8 @@
         "id": "1svUJZ9zQVNq",
         "outputId": "aa07c1f6-a131-4983-971b-eb59609a0c3b"
       },
-      "source": [
-        "boston = pd.DataFrame(df.data, columns=df.feature_names)\n",
-        "boston.head()"
-      ],
-      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/html": [
               "<div>\n",
@@ -290,15 +272,21 @@
               "[5 rows x 13 columns]"
             ]
           },
+          "execution_count": 7,
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "boston = pd.DataFrame(df.data, columns=df.feature_names)\n",
+        "boston.head()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -307,15 +295,8 @@
         "id": "KqyTwJB3Vult",
         "outputId": "27071100-438d-4159-9c35-4c4ea336f198"
       },
-      "source": [
-        "#To add Target prices column to the boston dataset\n",
-        "boston['TARGET'] = df.target\n",
-        "boston.head()"
-      ],
-      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/html": [
               "<div>\n",
@@ -453,15 +434,22 @@
               "[5 rows x 14 columns]"
             ]
           },
+          "execution_count": 8,
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "#To add Target prices column to the boston dataset\n",
+        "boston['TARGET'] = df.target\n",
+        "boston.head()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -469,13 +457,8 @@
         "id": "a4xoJiiEWgHI",
         "outputId": "a3a53133-6c86-4337-f4e9-869d29c570ca"
       },
-      "source": [
-        "boston.isnull().sum() #To check if there are any NULL values in any columns"
-      ],
-      "execution_count": 9,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "CRIM       0\n",
@@ -495,15 +478,20 @@
               "dtype: int64"
             ]
           },
+          "execution_count": 9,
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "boston.isnull().sum() #To check if there are any NULL values in any columns"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -511,6 +499,18 @@
         "id": "aCq3ApgqZXup",
         "outputId": "ce812515-cf28-41d1-8573-cb4ea566de36"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(430, 13)\n",
+            "(76, 13)\n",
+            "(430,)\n",
+            "(76,)\n"
+          ]
+        }
+      ],
       "source": [
         "from sklearn.model_selection import train_test_split\n",
         "\n",
@@ -523,19 +523,6 @@
         "print(X_test.shape)\n",
         "print(Y_train.shape)\n",
         "print(Y_test.shape)"
-      ],
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "(430, 13)\n",
-            "(76, 13)\n",
-            "(430,)\n",
-            "(76,)\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
@@ -550,18 +537,19 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 11,
       "metadata": {
         "id": "DIv56XRtdfKj"
       },
+      "outputs": [],
       "source": [
         "from sklearn.linear_model import LinearRegression\n",
         "from sklearn.metrics import mean_squared_error"
-      ],
-      "execution_count": 11,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -569,29 +557,29 @@
         "id": "HAeXVnT4eNkO",
         "outputId": "c4e1ac0d-83ba-48e3-e486-b5880c90e354"
       },
-      "source": [
-        "## Fitting Model on the training dataset\n",
-        "lin_model = LinearRegression()\n",
-        "lin_model.fit(X_train, Y_train)"
-      ],
-      "execution_count": 12,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
             ]
           },
+          "execution_count": 12,
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "## Fitting Model on the training dataset\n",
+        "lin_model = LinearRegression()\n",
+        "lin_model.fit(X_train, Y_train)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -599,6 +587,19 @@
         "id": "ESz9GsFce64d",
         "outputId": "86b8273c-8c75-4ad8-f632-f5b48b34768a"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The model performance for training set\n",
+            "The RMSE is 4.710901797319796\n",
+            "\n",
+            "The model performance for testing set\n",
+            "The RMSE is 4.687543527902972\n"
+          ]
+        }
+      ],
       "source": [
         "y_train_predict = lin_model.predict(X_train)\n",
         "rmse = (np.sqrt(mean_squared_error(Y_train, y_train_predict)))\n",
@@ -612,32 +613,31 @@
         "\n",
         "print('The model performance for testing set')\n",
         "print('The RMSE is {}'.format(rmse))"
-      ],
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "The model performance for training set\n",
-            "The RMSE is 4.710901797319796\n",
-            "\n",
-            "The model performance for testing set\n",
-            "The RMSE is 4.687543527902972\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "7w_7AV7L-Wy4"
       },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "A Dhruva Krishnama Raju.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
