--- a/A_Dhruva_Krishnama_Raju.ipynb
+++ b/A_Dhruva_Krishnama_Raju.ipynb
@@ -613,6 +613,11 @@
         "\n",
         "print('The model performance for testing set')\n",
         "print('The RMSE is {}'.format(rmse))"
+        
+        "#ACCURACY OF MODEL\n"  "\n",
+        "from sklearn.metrics import accuracy_score\n", "\n",
+        "\naccuracy_score(Y_test, y_py_test_predictred, normalize=False)", "\n",
+        "accuracy_score\n" ,"\n"
       ]
     },
     {
