fond the accuracy for the model predicted

--- a/A_Dhruva_Krishnama_Raju.ipynb
+++ b/A_Dhruva_Krishnama_Raju.ipynb
@@ -612,7 +612,7 @@
         "rmse = (np.sqrt(mean_squared_error(Y_test, y_test_predict)))\n",
         "\n",
         "print('The model performance for testing set')\n",
-        "print('The RMSE is {}'.format(rmse))"
+        "print('The RMSE is {}'.format(rmse))" ,"\n",
         
         "#ACCURACY OF MODEL\n"  "\n",
         "from sklearn.metrics import accuracy_score\n", "\n",
